--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -10,6 +10,9 @@ name: OpenWrt-CI
 on:
   schedule:
     - cron: 0 00 * * *
+  push:
+    branches: 
+      - master
   release:
     types: [published]
 
